glsl: make final glsl_type decref to release builtin functions

Otherwise existing builtins refer to types in hash tables that we have
already removed. Initialize builtin functions again when initializing
types.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=110796
Signed-off-by: Tapani Pälli <tapani.palli@intel.com>